# serializer version: 1
# name: test_format
  '''
  Usage: default stage list-files [OPTIONS] STAGE_NAME
  Try 'default stage list-files --help' for help.
  +- Error ----------------------------------------------------------------------+
  | Invalid value for '--format': 'invalid_format' is not one of 'TABLE',        |
  | 'JSON'.                                                                      |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_mutually_exclusive_options_error
  '''
  +- Error ----------------------------------------------------------------------+
  | Options '--option2' and '--option1' are incompatible.                        |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_overrideable_option_callback_with_mutually_exclusive
  '''
  +- Error ----------------------------------------------------------------------+
  | Options '--option2' and '--option1' are incompatible.                        |
  +------------------------------------------------------------------------------+
  
  '''
# ---
